--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -139,6 +139,8 @@
   padding: 8px 16px;
   background-color: #F5C518;
   color: #000000;
+  border: none;
+  cursor: pointer;
   border-radius: 4px;
   font-size: 14px;
   text-decoration: none;
