--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -41,19 +41,13 @@
               الإعدادات
             </a>
           </li>
-          <li>
-            <button class="logout-btn">
-              <span class="material-icons">logout</span>
-              تسجيل الخروج
-            </button>
-          </li>
+          <li></li>
         </ul>
       </div>
     </div>
-
-    <a routerLink="/auth/login" class="login-btn" *ngIf="!currentUser">
-      <span class="material-icons">login</span>
-      تسجيل الدخول
-    </a>
+    <button class="login-btn" (click)="logout()">
+      <span class="material-icons">logout</span>
+      تسجيل الخروج
+    </button>
   </div>
 </header>
