--- a/src/app/pages/auth/forgot-password/forgot-password.component.scss
+++ b/src/app/pages/auth/forgot-password/forgot-password.component.scss
@@ -3,13 +3,13 @@
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  background-color: #f9fafb;
+  background-image:  radial-gradient(circle, #ffffff, #f5efce);
   padding: 20px;
 }
 
 .forgot-password-card {
   width: 100%;
-  max-width: 450px;
+  max-width: 600px;
   background-color: #ffffff;
   border-radius: 8px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -29,8 +29,8 @@
 }
 
 .logo-icon {
-  width: 40px;
-  height: 40px;
+  width: 150px;
+  height: 150px;
   background-color: #F5C518;
   color: #000000;
   border-radius: 4px;
